# mw-visto-backend

./: .env.exemple  .gitignore  README.md  bench.sh  pyproject.toml  zappa_settings.json
.agents/: AGENTS.md
core/: pagination.py  settings.py  storage_backends.py  urls.py
core/filters/: filter_in.py  include_exclude.py
core/mixins/: bulk_delete.py  optimized.py  soft_delete.py  soft_delete_admin.py
core/observability/: __init__.py  db.py  middleware.py  tasks.py  timing.py
core/services/: s3.py  sheet.py
core/utils/: format_perf.py
inspection/: __init__.py  admin.py  urls.py
inspection/filters/: __init__.py  inspection.py  torry_tech_query.py
inspection/migrations/: 0001_initial.py  0002_alter_inspection_status.py  0003_inspectiontype_inspection_expiration_days_and_more.py  0004_remove_inspectionstep_description_and_more.py  0005_inspectionmotive_inspection_motive.py  0006_inspectionmotive_expiration_days_and_more.py  0007_remove_inspection_expiration_days_and_more.py  0008_remove_inspectiontype_motive.py  0009_remove_inspectionstep_photo_inspectionstep_file.py  0010_inspection_notify_email_inspection_notify_whatsapp.py  0011_inspectiontype_provider_inspector.py  0012_alter_inspectiontype_provider.py  0013_inspectionstep_latitude_inspectionstep_longitude.py  0014_remove_inspection_scheduled_to.py  0015_alter_inspectionstep_status_torrytechquery.py  0016_inspectionstep_description.py  0017_alter_inspection_status.py  0018_inspection_signature_hash_and_more.py  0019_activatorautomationrule.py  (+4 more)
sga/: admin.py  apps.py  urls.py
signature/: __init__.py
(+69 files in other folders)
