[project]
name = "mw-visto-backend"
version = "0.1.0"
description = "MW Visto Backend"
authors = [
    { name = "Maquina Web", email = "arte@maquinaweb.com.br" },
    { name = "Samuel Pereira da Silva", email = "samuel@maquinaweb.com.br" },
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "django~=5.2",
    "djangorestframework>=3.15.1,<4",
    "django-filter~=24.2",
    "python-decouple~=3.8",
    "drf-nested-routers>=0.94.1,<0.95",
    "drf-spectacular>=0.27.2,<0.28",
    "django-debug-toolbar>=4.4.2,<5",
    "django-storages>=1.14.4,<2",
    "drf-writable-nested>=0.7.0,<0.8",
    "django-cors-headers>=4.4.0,<5",
    "pillow>=10.4.0,<11",
    "sentry-sdk[django]==2.30.0",
    "requests>=2.32.3",
    "psycopg==3.2.9",
    "psycopg[binary]==3.2.9",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "twilio>=9.8.7",
    "zappa",
    "maquinaweb-shared-auth>=0.2.80",
    "python-json-logger>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[dependency-groups]
dev = ["ruff>=0.13.1"]

[tool.ruff]
line-length = 80

[tool.uv.sources]
zappa = { git = "https://github.com/SMCodesP/Zappa.git", branch = "fix/double-redirect" }
